--- a/B3.html
+++ b/B3.html
@@ -5,37 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="B3.css">
-    <style>
-        #transform{
-        width: 100px;
-        height: 100px;
-        background-color: aqua;
-        transition: width 2s, height 4s;
-        margin: 10px;
-        }
-        #transform:hover {
-            width: 100px;
-            height: 100px;
-            margin-left: 15px;
-            border-radius: 20%;
-            background-color: rgb(149, 115, 13);
-            transition-duration: 2s;
-            
-            transition: rgb(218, 80, 0);margin-left: 30px;border-radius: 50%;
-            
-        }
-        #tranform:hover{
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            background-color: rgb(218, 80, 0);
-            transition-duration: 3s;
-        }
-     </style>
 </head>
 <body>
-    <div id="transform">
-
-    </div>
+    <div class="square transform"></div>
 </body>
 </html>
